# python-study-in-school

./: .coverage  .gitignore  LICENSE  README.md  build-windows.bat  build.py  build.sh  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
client/: __init__.py
client/assets/: .gitkeep
client/assets/textures/: .gitkeep
client/launcher/: __init__.py  main.py  version.py
client/net/: __init__.py  auth.py  protocol.py  websocket_client.py  ws_manager.py
client/plugins/: __init__.py  base.py
client/plugins/gomoku/: __init__.py  game.py  widget.py
client/plugins/monopoly/: __init__.py  game.py  widget.py
client/plugins/racing/: __init__.py  game.py  widget.py
client/plugins/shooter2d/: __init__.py  game.py  widget.py
client/plugins/werewolf/: __init__.py  game.py  widget.py
client/services/: __init__.py  cache.py  config.py  game_session.py  logger.py  updater.py
client/shell/: __init__.py  main_window.py
client/shell/styles/: __init__.py  qss.py  theme.py
client/shell/utils/: __init__.py  animation.py
client/shell/widgets/: __init__.py  arena_lobby_view.py  arena_room_view.py  arena_widget.py  chat_widget.py  create_room_dialog.py  friends_widget.py  game_card.py  game_view.py  lobby_widget.py  login_widget.py  notification_widget.py  plugin_host_widget.py  register_dialog.py  right_panel_widget.py  rooms_widget.py  sidebar_widget.py  (+1 more)
docs/: TECHNICAL_IMPLEMENTATION.md  TECHNICAL_SPEC.md
server/: __init__.py  config.py  main.py
server/games/: __init__.py  base.py  game_service.py  gomoku.py  monopoly.py  racing.py  shooter2d.py  werewolf.py
server/gateway/: __init__.py  connection.py  handler.py  websocket_server.py
server/models/: __init__.py  game_event.py  room.py  user.py
server/services/: __init__.py  auth_service.py  chat_service.py  match_service.py  room_service.py  user_service.py
tests/: __init__.py  test_plugins.py  test_server_monopoly.py
