[project]
name = "aether-party"
version = "0.1.0"
description = "跨平台好友对战大厅 - 多游戏合集"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zazak1"}
]
requires-python = ">=3.11"
keywords = ["game", "multiplayer", "cross-platform", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "PySide6>=6.6.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "arcade>=2.6.17",
    "aiosqlite>=0.19.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "pyinstaller>=6.2.0",
]
voice = [
    "aiortc>=1.6.0",
]
racing = [
    "panda3d>=1.10.14",
]

[project.urls]
Homepage = "https://github.com/Zazak1/python-study-in-school"
Repository = "https://github.com/Zazak1/python-study-in-school.git"

[project.scripts]
aether-party = "client.launcher.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["client*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=client --cov-report=term-missing"

